Added SSO docs to left nav

--- a/src/content/graphos/config.json
+++ b/src/content/graphos/config.json
@@ -68,7 +68,12 @@
       "Organizations": "/org/organizations",
       "Members, roles, and permissions": "/org/members",
       "Plans and billing": "/org/plans",
-      "User account": "/org/account"
+      "User account": "/org/account",
+      "SSO Setup": {
+        "Okta Integration Guide": "/sso/okta-integration-guide",
+        "SAML Integration Guide": "/sso/saml-integration-guide",
+        "Azure AD Integration Guide": "/sso/azure-ad-integration-guide"
+      }
     }
   }
 }
