Apply suggestions from code review
Co-authored-by: Stephen Barlow <barlow.stephen+git@gmail.com>

--- a/src/content/graphos/config.json
+++ b/src/content/graphos/config.json
@@ -17,8 +17,8 @@
     },
     "Working with Supergraphs": {
       "Overview": "/graphs/overview",
-      "Adding a subgraph": "/graphs/adding-a-subgraph",
       "Publishing schemas": "/schema/cli-registration",
+      "Creating a new subgraph": "/graphs/adding-a-subgraph",
       "Local development": "/graphs/local-development",
       "Managing graphs in Studio": "/graphs/studio-features",
       "Supergraph-specific Studio features": "/graphs/federated-graphs",
