--- a/src/content/graphos/config.json
+++ b/src/content/graphos/config.json
@@ -18,6 +18,7 @@
     "Working with Supergraphs": {
       "Overview": "/graphs/overview",
       "Publishing schemas": "/schema/cli-registration",
+      "Creating a new subgraph": "/graphs/creating-a-subgraph",
       "Local development": "/graphs/local-development",
       "Managing graphs in Studio": "/graphs/studio-features",
       "Supergraph-specific Studio features": "/graphs/federated-graphs",
