--- a/src/content/graphos/config.json
+++ b/src/content/graphos/config.json
@@ -69,7 +69,12 @@
       "Organizations": "/org/organizations",
       "Members, roles, and permissions": "/org/members",
       "Plans and billing": "/org/plans",
-      "User account": "/org/account"
+      "User account": "/org/account",
+      "Single Sign-On (SSO)": {
+        "Okta": "/sso/okta-integration-guide",
+        "Azure AD": "/sso/azure-ad-integration-guide",
+        "SAML": "/sso/saml-integration-guide"
+      }
     }
   }
 }
