--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-icons": "^4.6.0",
     "react-markdown": "^8.0.0",
     "react-player": "^2.10.1",
+    "react-string-replace": "^1.1.0",
     "react-use": "^17.3.2",
     "rehype": "^12.0.0",
     "rehype-autolink-headings": "^5.1.0",
