--- a/packages/chakra-helpers/package.json
+++ b/packages/chakra-helpers/package.json
@@ -31,7 +31,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "@apollo/explorer": "^0.5.2",
+    "@apollo/explorer": "2.0.1",
     "@ctrl/tinycolor": "^3.4.1",
     "fenceparser": "^1.1.1",
     "outdent": "^0.8.0",
@@ -44,5 +44,8 @@
     "@chakra-ui/react": "^1.6.0",
     "@react-icons/all-files": "^4.1.0",
     "prismjs": "^1.27.0"
+  },
+  "volta": {
+    "node": "16.15.1"
   }
 }
