--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "gatsby-plugin-mdx": "^2.14.0",
     "gatsby-plugin-next-seo": "^1.9.0",
     "gatsby-plugin-offline": "^5.3.0",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sitemap": "^5.3.0",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
     "gatsby-plugin-webfonts": "^2.2.1",
