Article on defer for GraphOS docs (#283)
* Resolve some more broken links

* First swing at GraphOS defer article

* Incorporate some (but not yet all) feedback

* Simplify GraphOS defer article

* More defer article improvements

--- a/src/content/graphos/config.json
+++ b/src/content/graphos/config.json
@@ -24,10 +24,11 @@
       "Supergraph-specific Studio features": "/graphs/federated-graphs",
       "Self-hosted setup (enterprise only)": "/quickstart/self-hosted"
     },
-    "Routing for Supergraphs": {
+    "Routing": {
       "Cloud routing overview": "/routing/cloud",
       "Configuring cloud routing": "/routing/cloud-configuration",
-      "Self-hosted routing (enterprise only)": "/routing/self-hosted"
+      "Self-hosted routing (enterprise only)": "/routing/self-hosted",
+      "Using @defer": "/routing/defer"
     },
     "The Explorer": {
       "Overview": "/explorer/explorer",
