--- a/src/content/graphos/config.json
+++ b/src/content/graphos/config.json
@@ -34,7 +34,7 @@
       "Overview": "/explorer/explorer",
       "Connecting and authenticating": "/explorer/connecting-authenticating",
       "Operation collections": "/explorer/operation-collections",
-      "Embedded Explorer": "/explorer/embed-explorer",
+      "Embedding the Explorer": "/explorer/embed-explorer",
       "Additional features": "/explorer/additional-features"
     },
     "Metrics Reporting": {
