--- a/src/content/basics/config.json
+++ b/src/content/basics/config.json
@@ -10,7 +10,7 @@
     },
     "Documentation Sets": {
       "Build Your Supergraph": {
-        "GraphOS": "/graphos/",
+        "GraphOS": ["/graphos/"],
         "Apollo Federation": "/federation/"
       },
       "Technical Reference": {
