Updating enterprise only nav items to use annotations

--- a/src/content/graphos/config.json
+++ b/src/content/graphos/config.json
@@ -22,12 +22,12 @@
       "Local development": "/graphs/local-development",
       "Managing graphs in Studio": "/graphs/studio-features",
       "Supergraph-specific Studio features": "/graphs/federated-graphs",
-      "Self-hosted setup (enterprise only)": "/quickstart/self-hosted"
+      "Self-hosted setup": ["/quickstart/self-hosted", ["enterprise"]]
     },
     "Routing": {
       "Cloud routing overview": "/routing/cloud",
       "Configuring cloud routing": "/routing/cloud-configuration",
-      "Self-hosted routing (enterprise only)": "/routing/self-hosted",
+      "Self-hosted routing": ["/routing/self-hosted", ["enterprise"]],
       "Using @defer": "/routing/defer"
     },
     "The Explorer": {
@@ -41,7 +41,7 @@
       "Operation metrics": "/metrics/usage-reporting",
       "Field usage": "/metrics/field-usage",
       "Segmenting by client": "/metrics/client-awareness",
-      "Datadog forwarding (enterprise only)": "/metrics/datadog-integration",
+      "Datadog forwarding": ["/metrics/datadog-integration", ["enterprise"]],
       "Sending metrics to GraphOS": "/metrics/sending-operation-metrics",
       "Operation signatures": "/metrics/operation-signatures"
     },
@@ -49,7 +49,7 @@
       "Schema checks": "/delivery/schema-checks",
       "Configuring schema checks": "/delivery/check-configurations",
       "Launches": "/delivery/launches",
-      "Contracts (enterprise only)": "/delivery/contracts",
+      "Contracts": ["/delivery/contracts", ["enterprise"]],
       "Validating client operations": "/delivery/validating-client-operations",
       "Connecting to GitHub": "/delivery/github-integration"
     },
@@ -62,7 +62,7 @@
     },
     "Security": {
       "API keys": "/api-keys",
-      "Audit log (enterprise only)": "/audit-log",
+      "Audit log": ["/audit-log", ["enterprise"]],
       "Sub-processors": "/sub-processors",
       "Data privacy and compliance": "/data-privacy"
     },
