Initial work on article about updating your graph

--- a/src/content/graphos/config.json
+++ b/src/content/graphos/config.json
@@ -1,6 +1,12 @@
 {
   "title": "GraphOS",
-  "algoliaFilters": ["docset:graphos", ["docset:rover", "docset:federation"]],
+  "algoliaFilters": [
+    "docset:graphos",
+    [
+      "docset:rover",
+      "docset:federation"
+    ]
+  ],
   "sidebar": {
     "Introduction": "/",
     "Sandbox (no account required)": "/explorer/sandbox",
@@ -9,19 +15,30 @@
       "1️⃣ Create your supergraph": "/quickstart/cloud",
       "2️⃣ Next steps": "/quickstart/next-steps"
     },
-    "Working with Supergraphs": {
+    "Working with Graphs": {
       "Overview": "/graphs/overview",
       "Publishing schemas": "/schema/cli-registration",
       "Creating a new subgraph": "/graphs/creating-a-subgraph",
       "Local development": "/graphs/local-development",
+      "Updating your graph": "/graphs/updating",
       "Managing graphs in Studio": "/graphs/studio-features",
       "Supergraph-specific Studio features": "/graphs/federated-graphs",
-      "Self-hosted setup": ["/quickstart/self-hosted", ["enterprise"]]
+      "Self-hosted setup": [
+        "/quickstart/self-hosted",
+        [
+          "enterprise"
+        ]
+      ]
     },
     "Routing": {
       "Cloud routing overview": "/routing/cloud",
       "Configuring cloud routing": "/routing/cloud-configuration",
-      "Self-hosted routing": ["/routing/self-hosted", ["enterprise"]],
+      "Self-hosted routing": [
+        "/routing/self-hosted",
+        [
+          "enterprise"
+        ]
+      ],
       "Using @defer": "/routing/defer"
     },
     "The Explorer": {
@@ -35,7 +52,12 @@
       "Operation metrics": "/metrics/usage-reporting",
       "Field usage": "/metrics/field-usage",
       "Segmenting by client": "/metrics/client-awareness",
-      "Datadog forwarding": ["/metrics/datadog-integration", ["enterprise"]],
+      "Datadog forwarding": [
+        "/metrics/datadog-integration",
+        [
+          "enterprise"
+        ]
+      ],
       "Sending metrics to GraphOS": "/metrics/sending-operation-metrics",
       "Operation signatures": "/metrics/operation-signatures"
     },
@@ -43,7 +65,12 @@
       "Schema checks": "/delivery/schema-checks",
       "Configuring schema checks": "/delivery/check-configurations",
       "Launches": "/delivery/launches",
-      "Contracts": ["/delivery/contracts", ["enterprise"]],
+      "Contracts": [
+        "/delivery/contracts",
+        [
+          "enterprise"
+        ]
+      ],
       "Validating client operations": "/delivery/validating-client-operations",
       "Connecting to GitHub": "/delivery/github-integration"
     },
@@ -53,16 +80,25 @@
       "Schema changes": "/notifications/schema-change-integration",
       "Performance alerts": [
         "/notifications/performance-alerts",
-        ["experimental"]
+        [
+          "experimental"
+        ]
       ],
       "Build status": [
         "/notifications/build-status-notification",
-        ["enterprise"]
+        [
+          "enterprise"
+        ]
       ]
     },
     "Security": {
       "API keys": "/api-keys",
-      "Audit log": ["/audit-log", ["enterprise"]],
+      "Audit log": [
+        "/audit-log",
+        [
+          "enterprise"
+        ]
+      ],
       "Sub-processors": "/sub-processors",
       "Data privacy and compliance": "/data-privacy"
     },
@@ -72,9 +108,24 @@
       "Plans and billing": "/org/plans",
       "User account": "/org/account",
       "Single Sign-On (SSO)": {
-        "Okta": ["/sso/okta-integration-guide", ["enterprise"]],
-        "Azure AD": ["/sso/azure-ad-integration-guide", ["enterprise"]],
-        "SAML": ["/sso/saml-integration-guide", ["enterprise"]]
+        "Okta": [
+          "/sso/okta-integration-guide",
+          [
+            "enterprise"
+          ]
+        ],
+        "Azure AD": [
+          "/sso/azure-ad-integration-guide",
+          [
+            "enterprise"
+          ]
+        ],
+        "SAML": [
+          "/sso/saml-integration-guide",
+          [
+            "enterprise"
+          ]
+        ]
       }
     }
   }
