Apply suggestions from code review
Co-authored-by: Stephen Barlow <barlow.stephen+git@gmail.com>

--- a/src/content/graphos/config.json
+++ b/src/content/graphos/config.json
@@ -19,7 +19,7 @@
       "Overview": "/graphs/overview",
       "Publishing schemas": "/schema/cli-registration",
       "Creating a new subgraph": "/graphs/creating-a-subgraph",
-      "Securing a subgraph": "/graphs/securing-a-subgraph",
+      "Securing subgraphs": "/graphs/securing-a-subgraph",
       "Local development": "/graphs/local-development",
       "Managing graphs in Studio": "/graphs/studio-features",
       "Supergraph-specific Studio features": "/graphs/federated-graphs",
