--- a/src/content/graphos/config.json
+++ b/src/content/graphos/config.json
@@ -44,8 +44,8 @@
     "The Explorer": {
       "Overview": "/explorer/explorer",
       "Connecting and authenticating": "/explorer/connecting-authenticating",
+      "Embedding": "/explorer/embed-explorer",
       "Operation collections": "/explorer/operation-collections",
-      "Embedding the Explorer": "/explorer/embed-explorer",
       "Additional features": "/explorer/additional-features"
     },
     "Metrics Reporting": {
