Add a page on GraphOS subgraph security (#357)
* Add a page on GraphOS subgraph security

* Apply suggestions from code review

Co-authored-by: Stephen Barlow <barlow.stephen+git@gmail.com>

---------

Co-authored-by: Dylan Anthony <dbanty@users.noreply.github.com>
Co-authored-by: Stephen Barlow <barlow.stephen+git@gmail.com>

--- a/src/content/graphos/config.json
+++ b/src/content/graphos/config.json
@@ -19,6 +19,7 @@
       "Overview": "/graphs/overview",
       "Publishing schemas": "/schema/cli-registration",
       "Creating a new subgraph": "/graphs/creating-a-subgraph",
+      "Securing subgraphs": "/graphs/securing-a-subgraph",
       "Local development": "/graphs/local-development",
       "Updating your graph": "/graphs/updating",
       "Managing graphs in Studio": "/graphs/studio-features",
