Separate graphos docset some more, add a button beside the graphos category heading

--- a/sources/local.yml
+++ b/sources/local.yml
@@ -5,5 +5,7 @@
 graphos: src/content/graphos/basics
 graphos/metrics: src/content/graphos/metrics
 graphos/security: src/content/graphos/security
+graphos/delivery: src/content/graphos/delivery
+graphos/org: src/content/graphos/org
 technotes: src/content/technotes
 community: src/content/community
